--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+./"2018 Hacker Fellows Intern Class Capstone Project Requirements.pdf"
